--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -127,7 +127,7 @@
                       {{item.actionPlanStatus}}</button></td>
                       <td (click)="evidence(item.id)" data-toggle="tooltip" data-placement="top" title="Tooltip on top">{{item.evidenceReceived
                       }}</td>
-                      <td>  <button type="button" class="form-control mr-1 btn btn-secondary" data-toggle="modal" data-target="#exampleModal"><span>Auditor Log</span></button></td>
+                      <td>  <a class="mr-1 Auditor-log" data-toggle="modal" data-target="#exampleModal"><span>Auditor Log</span></a></td>
                     </tr>
                   </tbody>
                 </table>
