--- a/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
@@ -61,30 +61,30 @@
                             <div class="d-flex align-items-center justify-content-center">
                                 <div class=" mr-1">
                                     <label class="filter_label">Vendor Code</label>
-                                    <input type="text" [(ngModel)]="vendorCode" class="form-control mr-1 filter_css"
+                                    <input type="text" [(ngModel)]="vendorCode" class="form-control inputbox_css  mr-1 filter_css"
                                         placeholder="Vendor Code ">
                                 </div>
                                 <div class=" mr-1">
                                     <label class="filter_label">Vendor Name</label>
-                                    <input type="text" [(ngModel)]="vendorName" class="form-control mr-1 filter_css"
+                                    <input type="text" [(ngModel)]="vendorName" class="form-control inputbox_css  mr-1 filter_css"
                                         placeholder="Vendor Name ">
                                 </div>
 
                                 <div class=" mr-1">
                                     <label class="filter_label">From Date</label>
                                     <input type="date" [(ngModel)]="plannedStartDate"
-                                        class="form-control mr-1 filter_css" placeholder="Date ">
+                                        class="form-control mr-1 filter_css inputbox_css " placeholder="Date ">
                                 </div>
 
                                 <div class=" mr-1">
                                     <label class="filter_label">To Date</label>
-                                    <input type="date" [(ngModel)]="plannedEndDate" class="form-control mr-1 filter_css"
+                                    <input type="date" [(ngModel)]="plannedEndDate" class="form-control mr-1 filter_css inputbox_css "
                                         placeholder="Date ">
                                 </div>
 
                                 <div class=" mr-1">
                                     <label class="filter_label">Status</label>
-                                    <input type="text" [(ngModel)]="statusName" class="form-control mr-1 filter_css"
+                                    <input type="text" [(ngModel)]="statusName" class="form-control mr-1 filter_css inputbox_css "
                                         placeholder="Status ">
                                 </div>
                                 <div class="mt_24">
