--- a/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.css
+++ b/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.css
@@ -22,3 +22,11 @@
     width: 22px;
     cursor: pointer;
 }
+.btn-add-deatil{
+  width: 14px;
+    height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2px;
+}
