--- a/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
+++ b/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
@@ -8,8 +8,9 @@
                             <h3 class="card-title">Create Plan Details</h3>
                             <div class="d-flex">
                                 <input type="file" (change)="bulkUpload($event)" id="upload" hidden />
-                                <label for="upload" class="button-upload"> <i class="fas fa-upload mr-1 upload_ico"></i>
-                                    <span class="now_rap">Upload Plan</span></label>
+                                <button for="upload" class="button-upload btn btn-primary"> 
+                                    <i class="fas fa-upload mr-1 upload_ico"></i>
+                                    <span class="now_rap">Upload Plan</span></button>
                                 <button class="btn btn-success d-flex align-items-center ml-1"
                                 (click)="download()">
                                     <i class="fas fa-download mr-1 upload_ico"></i>
@@ -27,10 +28,11 @@
                                         <ng-select (change)="getVendor($event)"
                                         
                                         [items]="vendorObj" bindLabel="code" bindValue="id"
-                                        formControlName="vendorId" class="form-control">
+                                        formControlName="vendorId" class="form-control inputbox_css ">
                                     </ng-select>
                                     </div>
                                 </div>
+
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Vendor Name <span class="start_css">*</span></label>
@@ -38,72 +40,82 @@
                                          <ng-select (change)="getVendor($event)"
                                         
                                         [items]="vendorObj" bindLabel="name" bindValue="id"
-                                        formControlName="vendorId" class="form-control">
+                                        formControlName="vendorId" class="form-control inputbox_css ">
                                     </ng-select>
                                     </div>
                                 </div>
+
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Location <span class="start_css">*</span></label>
-                                        <select class="form-control" formControlName="locationId">
+                                        <select class="form-control inputbox_css " formControlName="locationId">
                                             <option *ngFor="let item of locationObj" [value]="item.id">{{item.name }}
                                             </option>
                                         </select>
                                     </div>
                                 </div>
+
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Any Other Location <span
                                                 class="start_css">*</span></label>
-                                        <input #otherLocation type="text" class="form-control" formControlName="otherLocation" 
+                                        <input #otherLocation type="text" class="form-control inputbox_css " formControlName="otherLocation" 
                                         (input)="otherLocation.value = otherLocation.value.toUpperCase()"
                                             placeholder="Type Any Other location">
                                     </div>
                                 </div>
+                                </div>
+                                <div class="row">
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Any Other Code <span
                                                 class="start_css">*</span></label>
-                                        <input type="text" class="form-control" placeholder="Type Any Other Code"
+                                        <input type="text" class="form-control inputbox_css mt_3" placeholder="Type Any Other Code"
                                             formControlName="otherCode">
                                     </div>
                                 </div>
+
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Type Code</label>
-                                        <input type="text" class="form-control" placeholder="Type Code"
+                                        <input type="text" class="form-control inputbox_css " placeholder="Type Code"
                                             formControlName="typeCode">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Type Name</label>
-                                        <input type="text" class="form-control" placeholder="Type Name"
+                                        <input type="text" class="form-control inputbox_css " placeholder="Type Name"
                                             formControlName="typeName">
                                     </div>
                                 </div>
+
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Type Location</label>
-                                        <input type="text" class="form-control" placeholder="Type location"
+                                        <input type="text" class="form-control inputbox_css " placeholder="Type location"
                                             formControlName="typeLocation">
                                     </div>
                                 </div>
-                                <div class="col-sm-3">
-                                    <div class="form-group">
-                                        <label class="form_label">Planned Start Date <span
-                                                class="start_css">*</span></label>
-                                        <input type="date" class="form-control inputbox_css"
-                                            formControlName="plannedStartDate"  
-                                            [min]="minStartDate"
-                                           >
-                                    </div>
+
+                               
                                 </div>
+                                <div class="row">
+                                    <div class="col-sm-3">
+                                        <div class="form-group">
+                                            <label class="form_label">Planned Start Date <span
+                                                    class="start_css">*</span></label>
+                                            <input type="date" class="form-control inputbox_css mt_3"
+                                                formControlName="plannedStartDate"  
+                                                [min]="minStartDate"
+                                               >
+                                        </div>
+                                    </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Planned End Date <span
                                                 class="start_css">*</span></label>
-                                        <input type="date" class="form-control inputbox_css"
+                                        <input type="date" class="form-control inputbox_css mt_3"
                                             formControlName="plannedEndDate"
                                             [min]="createPlanForm.controls['plannedStartDate'].value">
                                     </div>
@@ -113,7 +125,7 @@
                                         <label class="form_label">
                                             Additional MSIL Email
                                         </label>
-                                        <input type="text" class="form-control" placeholder="Enter Auditee MSIL email"
+                                        <input type="text" class="form-control inputbox_css " placeholder="Enter Auditee MSIL email"
                                             formControlName="additionalMSILEmail">
                                     </div>
                                 </div>
@@ -122,7 +134,7 @@
                                         <label class="form_label">
                                             Auditee Email Id <span class="start_css">*</span>
                                         </label>
-                                        <input type="text" class="form-control" placeholder="xyz@gmail.com"
+                                        <input type="text" class="form-control inputbox_css mt_3" placeholder="xyz@gmail.com"
                                             formControlName="auditeeEmail">
                                     </div>
                                 </div>
@@ -132,13 +144,13 @@
                                             Upload File
                                         </label>
                                         <input type="file" (change)="onFileSelected($event)"
-                                            formControlName="attachment" class="form-control">
+                                            formControlName="attachment" class="form-control inputbox_css ">
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="card-footer">
-                            <button class="btn btn-primary" (click)="submit()">Submit</button>
+                            <button class="btn btn-primary mr-1" (click)="submit()">Submit</button>
                             <button class="btn btn-default" (click)="close()">Close</button>
                         </div>
                     </form>
