--- a/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
@@ -12,21 +12,21 @@
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Vendor Code<span class="start_css">*</span></label>
-                                        <input type="text" class="form-control"
+                                        <input type="text" class="form-control inputbox_css "
                                         formControlName="vendorCode" placeholder="Type Any Other location">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Vendor Name<span class="start_css">*</span></label>
-                                        <input type="text" class="form-control"
+                                        <input type="text" class="form-control inputbox_css "
                                         formControlName="vendorName" placeholder="Type Any Other location">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Location <span class="start_css">*</span></label>
-                                        <input type="text" class="form-control"
+                                        <input type="text" class="form-control inputbox_css "
                                         formControlName="locationName" placeholder="Type Any Other location">
                                     </div>
                                 </div>
@@ -34,7 +34,7 @@
                                     <div class="form-group">
                                         <label class="form_label">Any Other location <span
                                                 class="start_css">*</span></label>
-                                        <input type="text" class="form-control"
+                                        <input type="text" class="form-control inputbox_css"
                                         formControlName="otherLocation" placeholder="Type Any Other location">
                                     </div>
                                 </div>
@@ -42,39 +42,39 @@
                                     <div class="form-group">
                                         <label class="form_label">Any Other Code <span
                                                 class="start_css">*</span></label>
-                                        <input type="text" class="form-control" placeholder="Type Any Other Code" formControlName="otherCode">
+                                        <input type="text" class="form-control inputbox_css mt_3" placeholder="Type Any Other Code" formControlName="otherCode">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Type Code</label>
-                                        <input type="text" class="form-control" placeholder="Type Code" formControlName="typeCode">
+                                        <input type="text" class="form-control inputbox_css " placeholder="Type Code" formControlName="typeCode">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Type Name</label>
-                                        <input type="text" class="form-control" placeholder="Type Name" formControlName="typeName">
+                                        <input type="text" class="form-control inputbox_css " placeholder="Type Name" formControlName="typeName">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Type location</label>
-                                        <input type="text" class="form-control" placeholder="Type location" formControlName="typeLocation">
+                                        <input type="text" class="form-control inputbox_css " placeholder="Type location" formControlName="typeLocation">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Planned Start Date <span
                                                 class="start_css">*</span></label>
-                                        <input type="date" class="form-control inputbox_css" formControlName="plannedStartDate">
+                                        <input type="date" class="form-control inputbox_css mt_3" formControlName="plannedStartDate">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Planned End Date <span
                                                 class="start_css">*</span></label>
-                                        <input type="date" class="form-control inputbox_css"
+                                        <input type="date" class="form-control inputbox_css mt_3"
                                         formControlName="plannedEndDate">
                                     </div>
                                 </div>
@@ -83,7 +83,7 @@
                                         <label class="form_label">
                                             Additional MSIL email
                                         </label>
-                                        <input type="text" class="form-control" 
+                                        <input type="text" class="form-control inputbox_css " 
                                             placeholder="Enter Auditee MSIL email"
                                             formControlName="additionalMSILEmail">
                                     </div>
@@ -93,7 +93,7 @@
                                         <label class="form_label">
                                             Auditee email id <span class="start_css">*</span>
                                         </label>
-                                        <input type="text" class="form-control" 
+                                        <input type="text" class="form-control inputbox_css mt_3" 
                                             placeholder="xyz@gmail.com" 
                                             formControlName="auditeeEmail">
                                     </div>
@@ -105,8 +105,8 @@
                                         </label>
                                         <div class="input-group">
                                             <div class="custom-file">
-                                                <input type="file" class="custom-file-input" id="exampleInputFile" formControlName="attachment">
-                                                <label class="custom-file-label" for="exampleInputFile">Choose
+                                                <input type="file" class="custom-file-input inputbox_css" id="exampleInputFile" formControlName="attachment">
+                                                <label class="custom-file-label inputbox_css" for="exampleInputFile">Choose
                                                     file</label>
                                             </div>
                                         </div>
