--- a/src/app/dashboard/manage-audit/manage-audit-initiate/manage-audit-initiate.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-initiate/manage-audit-initiate.component.html
@@ -49,7 +49,7 @@
                             <div class="col-sm-4">
                                 <div class="form-group">
                                     <label class="form_label">Part Number <span class="start_css">*</span> </label>
-                                    <input type="text" class="form-control" formControlName="partNumber" placeholder="Enter Part Number" >
+                                    <input type="text" class="form-control inputbox_css " formControlName="partNumber" placeholder="Enter Part Number" >
                                 </div>
                             </div>
                             <div class="col-sm-4">
@@ -70,7 +70,7 @@
                             <div class="col-sm-4">
                                 <div class="form-group">
                                     <label class="form_label">Any Other location</label>
-                                    <input type="text" class="form-control" formControlName="otherLocation" placeholder="Enter other location">
+                                    <input type="text" class="form-control inputbox_css " formControlName="otherLocation" placeholder="Enter other location">
                                 </div>
                             </div>
                         </div>
