--- a/src/app/dashboard/manage-audit/manage-audit-view/manage-audit-view.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-view/manage-audit-view.component.html
@@ -13,7 +13,7 @@
                             <div class="col-sm-3">
                                 <div class="form-group">
                                     <label class="form_label">Vendor Code <span class="start_css">*</span></label>
-                                    <input list="europe-countries" placeholder="Search Vendor Code" class="form-control"
+                                    <input list="europe-countries" placeholder="Search Vendor Code" class="form-control inputbox_css "
                                         disabled>
                                     <datalist id="europe-countries">
                                         <option>VCNH1231</option>
@@ -23,7 +23,7 @@
                             <div class="col-sm-3">
                                 <div class="form-group">
                                     <label class="form_label">Vendor Name <span class="start_css">*</span></label>
-                                    <select class="form-control" disabled>
+                                    <select class="form-control inputbox_css " disabled>
                                         <option>Vendor1</option>
                                     </select>
                                 </div>
@@ -31,7 +31,7 @@
                             <div class="col-sm-3">
                                 <div class="form-group">
                                     <label class="form_label">Location <span class="start_css">*</span></label>
-                                    <select class="form-control" disabled>
+                                    <select class="form-control inputbox_css " disabled>
                                         <option>Location2</option>
                                     </select>
                                 </div>
@@ -40,31 +40,31 @@
                             <div class="col-sm-3">
                                 <div class="form-group">
                                     <label class="form_label">Any Other Code <span class="start_css">*</span></label>
-                                    <input type="text" class="form-control" placeholder="XXXXXX" disabled>
+                                    <input type="text" class="form-control inputbox_css " placeholder="XXXXXX" disabled>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="form-group">
                                     <label class="form_label">Any Other Location </label>
-                                    <input type="text" class="form-control" placeholder="Enter Other Location" disabled>
+                                    <input type="text" class="form-control inputbox_css " placeholder="Enter Other Location" disabled>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="form-group">
                                     <label class="form_label">Type Code</label>
-                                    <input type="text" class="form-control" placeholder="XXXXX" disabled>
+                                    <input type="text" class="form-control inputbox_css " placeholder="XXXXX" disabled>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="form-group">
                                     <label class="form_label">Type Name</label>
-                                    <input type="text" class="form-control" placeholder="XXXXX" disabled>
+                                    <input type="text" class="form-control inputbox_css " placeholder="XXXXX" disabled>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="form-group">
                                     <label class="form_label">Type location</label>
-                                    <input type="text" class="form-control" placeholder="XXXXX" disabled>
+                                    <input type="text" class="form-control inputbox_css " placeholder="XXXXX" disabled>
                                 </div>
                             </div>
                             <div class="col-sm-3">
@@ -85,7 +85,7 @@
                                     <label class="form_label">
                                         Additional MSIL email
                                     </label>
-                                    <input type="text" class="form-control" ng-model="driverObj.DriverName"
+                                    <input type="text" class="form-control inputbox_css " ng-model="driverObj.DriverName"
                                         placeholder="XXXXX" disabled>
                                 </div>
                             </div>
@@ -94,7 +94,7 @@
                                     <label class="form_label">
                                         Auditee email id <span class="start_css">*</span>
                                     </label>
-                                    <input type="text" class="form-control" ng-model="driverObj.DriverName"
+                                    <input type="text" class="form-control inputbox_css " ng-model="driverObj.DriverName"
                                         placeholder="xyz@gmail.com" disabled>
                                 </div>
                             </div>
