--- a/src/app/dashboard/masters/audit-area/audit-area-edit/audit-area-edit.component.html
+++ b/src/app/dashboard/masters/audit-area/audit-area-edit/audit-area-edit.component.html
@@ -28,7 +28,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <button type="button" (click)="save()" class="btn btn-primary">Save</button>
+                            <button type="button" (click)="save()" class="btn btn-primary mr-1">Save</button>
                             <button type="button" (click)="close()" class="btn btn-default">Back</button>
                         </div>
                     </form>
