--- a/src/app/dashboard/masters/employee/employee-list/employee-list.component.html
+++ b/src/app/dashboard/masters/employee/employee-list/employee-list.component.html
@@ -6,14 +6,18 @@
             <div class="card-header">
               <div class="header_card">
                 <h3 class="card-title">Employee Master</h3>
+              <div class="d-flex align-items-center">
                 <div class="form-group filter_course">
                   <input type="text " name="search " autocomplete="off" [(ngModel)]="searchText"
-                      placeholder="Type to Search" style="width: 87%; height: calc(1.25rem + 14px); margin-left: 13%;" 
+                      placeholder="Type to Search" 
                       class="form-control ng-untouched ng-pristine ng-valid form_width"
                       ng-reflect-name="search" />
               </div>
-                <a *ngIf="isSuperAdmin" (click)="addEmployee()" class="btn btn-primary"> 
-                    <img src="../../../../../assets/icons/group.png" class="side_imgmaster mr-1">Add Employee</a>
+                <button *ngIf="isSuperAdmin" (click)="addEmployee()" class="btn btn-primary"> 
+                    <img src="../../../../../assets/icons/group.png" class="side_imgmaster mr-1">
+                    <span class="fon_14">Add Employee</span></button>
+                    </div>
+             
               </div>
             </div>
             <div class="card-body">
@@ -29,6 +33,7 @@
                       <th *ngIf="isSuperAdmin">Action</th>
                     </tr>
                   </thead>
+                  <tbody>
                   <tr *ngFor="let item of employeeObj | filter:searchText | paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index">
                     <td>{{(i+1) + pagination.pageSize * ( pagination.pageNumber-1 ) }}</td>
                     <td>{{item.code}}</td>
@@ -42,13 +47,13 @@
                       </div>
                     </td>
                   </tr>
-                  <tbody>
+                  
                   </tbody>
                 </table>
               </div>
               <nav aria-label="Page navigation example">
                 <div class="pagination justift_end">
-                  <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
+                  <pagination-controls (pageChange)="pageChanged($event)" class="fon_14"></pagination-controls>
                 </div>
               </nav>
             </div>
