--- a/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
@@ -11,63 +11,36 @@
                             <div class="row">
                                 <div class="col-sm-3">
                                     <div class="form-group">
-<<<<<<< HEAD
-                                        <label class="form_label">Vendor Code<span class="start_css">*</span></label>
-                                        <input type="text" class="form-control inputbox_css "
-=======
                                         <label class="form_label">Vendor Code</label>
-                                        <input type="text" class="form-control"
->>>>>>> 107e582dab161c31558df0eba1035cc0b46e9cb4
+                                        <input type="text" class="form-control inputbox_css "
                                         formControlName="vendorCode" placeholder="Type Any Other location">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
-<<<<<<< HEAD
-                                        <label class="form_label">Vendor Name<span class="start_css">*</span></label>
-                                        <input type="text" class="form-control inputbox_css "
-=======
                                         <label class="form_label">Vendor Name</label>
                                         <input type="text" class="form-control"
->>>>>>> 107e582dab161c31558df0eba1035cc0b46e9cb4
                                         formControlName="vendorName" placeholder="Type Any Other location">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
-<<<<<<< HEAD
-                                        <label class="form_label">Location <span class="start_css">*</span></label>
-                                        <input type="text" class="form-control inputbox_css "
-=======
                                         <label class="form_label">Location </label>
                                         <input type="text" class="form-control"
->>>>>>> 107e582dab161c31558df0eba1035cc0b46e9cb4
                                         formControlName="locationName" placeholder="Type Any Other location">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
-<<<<<<< HEAD
-                                        <label class="form_label">Any Other location <span
-                                                class="start_css">*</span></label>
-                                        <input type="text" class="form-control inputbox_css"
-=======
                                         <label class="form_label">Any Other Location </label>
                                         <input type="text" class="form-control"
->>>>>>> 107e582dab161c31558df0eba1035cc0b46e9cb4
                                         formControlName="otherLocation" placeholder="Type Any Other location">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
-<<<<<<< HEAD
-                                        <label class="form_label">Any Other Code <span
-                                                class="start_css">*</span></label>
+                                        <label class="form_label">Any Other Code ></label>
                                         <input type="text" class="form-control inputbox_css mt_3" placeholder="Type Any Other Code" formControlName="otherCode">
-=======
-                                        <label class="form_label">Any Other Code </label>
-                                        <input type="text" class="form-control" placeholder="Type Any Other Code" formControlName="otherCode">
->>>>>>> 107e582dab161c31558df0eba1035cc0b46e9cb4
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
