--- a/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
@@ -13,52 +13,52 @@
                                     <div class="form-group">
                                         <label class="form_label">Vendor Code</label>
                                         <input type="text" class="form-control inputbox_css "
-                                        formControlName="vendorCode" placeholder="Type Any Other location">
+                                        formControlName="vendorCode">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Vendor Name</label>
                                         <input type="text" class="form-control"
-                                        formControlName="vendorName" placeholder="Type Any Other location">
+                                        formControlName="vendorName" >
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Location </label>
                                         <input type="text" class="form-control"
-                                        formControlName="locationName" placeholder="Type Any Other location">
+                                        formControlName="locationName" >
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Any Other Location </label>
                                         <input type="text" class="form-control"
-                                        formControlName="otherLocation" placeholder="Type Any Other location">
+                                        formControlName="otherLocation">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
-                                        <label class="form_label">Any Other Code ></label>
-                                        <input type="text" class="form-control inputbox_css mt_3" placeholder="Type Any Other Code" formControlName="otherCode">
+                                        <label class="form_label">Any Other Code</label>
+                                        <input type="text" class="form-control inputbox_css mt_3"   formControlName="otherCode">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Type Code</label>
-                                        <input type="text" class="form-control inputbox_css " placeholder="Type Code" formControlName="typeCode">
+                                        <input type="text" class="form-control inputbox_css"  formControlName="typeCode">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Type Name</label>
-                                        <input type="text" class="form-control inputbox_css " placeholder="Type Name" formControlName="typeName">
+                                        <input type="text" class="form-control inputbox_css"  formControlName="typeName">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Type Location</label>
-                                        <input type="text" class="form-control" placeholder="Type location" formControlName="typeLocation">
+                                        <input type="text" class="form-control"  formControlName="typeLocation">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
@@ -79,8 +79,7 @@
                                         <label class="form_label">
                                             Additional MSIL Email
                                         </label>
-                                        <input type="text" class="form-control inputbox_css " 
-                                            placeholder="Enter Auditee MSIL email"
+                                        <input type="text" class="form-control inputbox_css" 
                                             formControlName="additionalMSILEmail">
                                     </div>
                                 </div>
@@ -89,8 +88,7 @@
                                         <label class="form_label">
                                             Auditee Email Id 
                                         </label>
-                                        <input type="text" class="form-control inputbox_css mt_3" 
-                                            placeholder="xyz@gmail.com" 
+                                        <input type="text" class="form-control inputbox_css mt_3"  
                                             formControlName="auditeeEmail">
                                     </div>
                                 </div>
