--- a/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.css
+++ b/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.css
@@ -1,4 +1,8 @@
-.active, .btn-link:hover {
+.active-tab {
+    background-color: #1a65a3 !important;
+    color: white !important;
+  }
+  .disactive-tab {
     background-color: #666 !important;
     color: white !important;
   }
