--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
@@ -26,7 +26,7 @@
                       <tr *ngFor="let item of categoryScoreList;  let i =index;" style="cursor: pointer;" data-toggle="tooltip" data-placement="top" [title]="item.name" class="hover-tr">
                         <td (click)="details(item.categoryId)">{{i+1}}.</td>
                         <td (click)="details(item.categoryId)">{{item.name}}</td>
-                        <td (click)="details(item.categoryId)">
+                        <td (click)="details(item.categoryId)">{{item.competedRegulation}}/{{item.totalRegulation}}
                         </td>
                         <td (click)="details(item.categoryId)">{{item.categoryScore
                         }}/{{item.totalCount}}</td>
@@ -44,7 +44,7 @@
               <button class="btn btn-primary mr-1" (click)="reportSubmit(draft)">Save as draft</button>
               <button class="btn btn-danger mr-1" data-toggle="modal" data-target="#executive-summary">Executive Summary
               </button>
-              <button (click)="getEmployeeList()" class="btn btn-success mr-1" data-toggle="modal" data-target="#submit">Submit</button>
+              <button (click)="getEmployeeList()" class="btn btn-success mr-1" data-toggle="modal" data-target="#submit" [disabled]="isNotCompleteRegulation">Submit</button>
               <button (click)="back()" class="btn btn-default">Back</button>
             </div>
           </div>
